--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -10,7 +10,7 @@
   top: 10%;
   left: 70%;
 }
-.taita {
+.taita, .aadi {
   display: flex;
   align-items: center;
   margin-top: 2em;
@@ -19,16 +19,16 @@
   height: 80px;
   margin-right: 1em;
 }
-.buy-taita {
+.buy-taita, .buy-aadi {
   font-size: 1.2em;
   background-color: #80708e;
   color: black;
   min-width: 250px;
 }
-.buy-taita:disabled {
+.buy-taita:disabled, .buy-aadi:disabled {
   background-color: #bbb5c1;
   color: black;
 }
-.buy-taita:hover {
+.buy-taita:hover, .buy-aadi:hover {
   border-color: #992fbc;
 }
