--- a/src/components/achievements.css
+++ b/src/components/achievements.css
@@ -1,34 +1,34 @@
 .achievements {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   font-size: 1em;
   font-weight: 700;
   color: #000000;
   position: absolute;
   top: 10%;
-  left: 70%;
+  left: 60%;
 }
-.first-click {
+.achievements div {
   display: flex;
   align-items: center;
   margin-top: 2em;
 }
-.first-click-img {
+.achievements img {
   height: 80px;
   margin-right: 1em;
 }
-.first-click-button {
+.achievements button {
   font-size: 1.2em;
   background-color: #44ff00;
   color: black;
   min-width: 250px;
 }
-.first-click-button:disabled {
+.achievements button:disabled {
   background-color: #e74012;
   color: black;
 }
-.first-click-button:hover {
+.achievements button:hover {
   border-color: #992fbc;
 }
