--- a/src/components/achievements.css
+++ b/src/components/achievements.css
@@ -8,7 +8,7 @@
   color: #000000;
   position: absolute;
   top: 10%;
-  left: 60%;
+  left: 70%;
 }
 .achievements div {
   display: flex;
@@ -18,6 +18,8 @@
 .achievements img {
   height: 80px;
   margin-right: 1em;
+  border-radius: 8px;
+  overflow: hidden;
 }
 .achievements button {
   font-size: 1.2em;
@@ -31,4 +33,14 @@
 }
 .achievements button:hover {
   border-color: #992fbc;
+}
+
+.achievements div div {
+  margin: 0;
+  max-width: 300px;
+  flex-direction: column;
+
+  h3 {
+    margin: 0.2em;
+  }
 }
