--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -9,30 +9,36 @@
   position: absolute;
   top: 10%;
   left: 70%;
-}
-.taita,
-.aadi {
-  display: flex;
-  align-items: center;
-  margin-top: 2em;
-}
-.taita-image {
-  height: 80px;
-  margin-right: 1em;
-}
-.buy-taita,
-.buy-aadi {
-  font-size: 1.2em;
-  background-color: #80708e;
-  color: black;
-  min-width: 250px;
-}
-.buy-taita:disabled,
-.buy-aadi:disabled {
-  background-color: #bbb5c1;
-  color: black;
-}
-.buy-taita:hover,
-.buy-aadi:hover {
-  border-color: #992fbc;
+
+  div {
+    display: flex;
+    align-items: center;
+    margin-top: 2em;
+
+    div {
+      margin: 0;
+    }
+  }
+
+  img {
+    height: 80px;
+    margin-right: 1em;
+    border-radius: 8px;
+  }
+
+  button {
+    font-size: 1.2em;
+    background-color: #80708e;
+    color: black;
+    min-width: 250px;
+  }
+
+  button:disabled {
+    background-color: #bbb5c1;
+    color: black;
+  }
+
+  button:hover {
+    border-color: #992fbc;
+  }
 }
